force-app/main/default/objects/Activity/fields/Activity_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_2__c</fullName>
    <label>Activity Type 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>