force-app/main/default/objects/Activity/fields/Actual_Call_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Call_Scheduled_Date__c</fullName>
    <label>Actual Call Scheduled Date</label>
    <type>DateTime</type>
</CustomField>