force-app/main/default/objects/Activity/fields/Alternate_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Account_Number__c</fullName>
    <label>Alternate Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>