force-app/main/default/objects/Activity/fields/Alternate_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Field__c</fullName>
    <label>Alternate Email Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>