force-app/main/default/objects/Activity/fields/Automation_Control__c.field-meta.xml
<CustomField>
    <fullName>Automation_Control__c</fullName>
    <label>Automation Control</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>