force-app/main/default/objects/Activity/fields/Best_Number_to_Reach_You__c.field-meta.xml
<CustomField>
    <fullName>Best_Number_to_Reach_You__c</fullName>
    <label>Best Number to Reach You?</label>
    <type>Phone</type>
</CustomField>