force-app/main/default/objects/Activity/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call – First contact with decision maker</fullName>
            </value>
            <value>
                <fullName>Call – Follow up with decision maker</fullName>
            </value>
            <value>
                <fullName>Call – Reached gatekeeper</fullName>
            </value>
            <value>
                <fullName>Call – Left message</fullName>
            </value>
            <value>
                <fullName>Call – No answer/no message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>