force-app/main/default/objects/Activity/fields/Caller_ID__c.field-meta.xml
<CustomField>
    <fullName>Caller_ID__c</fullName>
    <description>Populates from the IfbyPhone integration.</description>
    <inlineHelpText>Populates from the IfbyPhone integration.</inlineHelpText>
    <label>Caller ID</label>
    <type>Phone</type>
</CustomField>