force-app/main/default/objects/Activity/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <formula>Delivery_Schedule__r.Site_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>