force-app/main/default/objects/Activity/fields/Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete__c</fullName>
    <formula>Completed_Date__c- ActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>