force-app/main/default/objects/Activity/fields/DDChanged__c.field-meta.xml
<CustomField>
    <fullName>DDChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DDChanged</label>
    <type>Checkbox</type>
</CustomField>