force-app/main/default/objects/Activity/fields/Estimated_Annual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Spend__c</fullName>
    <label>Estimated Annual Spend?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>