force-app/main/default/objects/Activity/fields/Go_Forward_Account__c.field-meta.xml
<CustomField>
    <fullName>Go_Forward_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go Forward Account?</label>
    <type>Checkbox</type>
</CustomField>