force-app/main/default/objects/Activity/fields/Last_Task__c.field-meta.xml
<CustomField>
    <fullName>Last_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Last task field prevents new tasks from being auto-created</description>
    <inlineHelpText>If the opportunity is Closed Won or Closed Lost than check the “Last Task” box to disable new automatic task creation.</inlineHelpText>
    <label>Last Task</label>
    <type>Checkbox</type>
</CustomField>