force-app/main/default/objects/Activity/fields/mh_Associated_Green_Sheet__c.field-meta.xml
<CustomField>
    <fullName>mh_Associated_Green_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associated Green Sheet</label>
    <type>Checkbox</type>
</CustomField>