force-app/main/default/objects/Activity/fields/mh_Best_Action_Commitment__c.field-meta.xml
<CustomField>
    <fullName>mh_Best_Action_Commitment__c</fullName>
    <label>Best Action Commitment</label>
    <type>TextArea</type>
</CustomField>