force-app/main/default/objects/Activity/fields/mh_Green_Sheet_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>mh_Green_Sheet_Last_Updated__c</fullName>
    <label>Green Sheet Last Updated</label>
    <type>DateTime</type>
</CustomField>