force-app/main/default/objects/Activity/fields/mh_Manager_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>mh_Manager_Review_Date__c</fullName>
    <label>Manager Review Date</label>
    <type>Date</type>
</CustomField>