force-app/main/default/objects/Activity/fields/Number_of_Units_Built_Sold_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_Built_Sold_Per_Year__c</fullName>
    <label>Number of Units Built / Sold Per Year?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>