force-app/main/default/objects/Activity/fields/Part_of_Another_Company__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Another_Company__c</fullName>
    <label>Part of Another Company?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>