force-app/main/default/objects/Activity/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer lost bid or project was cancelled</fullName>
            </value>
            <value>
                <fullName>Product assortment did not meet customer needs</fullName>
            </value>
            <value>
                <fullName>Price offered did not meet customer perception of value</fullName>
            </value>
            <value>
                <fullName>Credit solution did not meet customer needs</fullName>
            </value>
            <value>
                <fullName>Contract terms did not meet customer needs</fullName>
            </value>
            <value>
                <fullName>Service failure (e.g. delivery, billing, order management) caused the customer to purchase elsewhere</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Comments field</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Delivery and/or Installation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>