force-app/main/default/objects/Activity/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Request</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>