force-app/main/default/objects/Activity/fields/Sent_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Email?</label>
    <type>Checkbox</type>
</CustomField>