force-app/main/default/objects/Activity/fields/Type_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Call__c</fullName>
    <description>Displays the call type of inbound or outbound</description>
    <label>Type of Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>