force-app/main/default/objects/Activity/fields/What_is_your_best_email__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_best_email__c</fullName>
    <label>What is your best email?</label>
    <type>Email</type>
</CustomField>