force-app/main/default/objects/Activity/listViews/DelegatedActivities.listView-meta.xml
<ListView>
    <fullName>DelegatedActivities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Delegated</filterScope>
    <label>Delegated Activities</label>
</ListView>