force-app/main/default/objects/Activity/listViews/MyActivities.listView-meta.xml
<ListView>
    <fullName>MyActivities</fullName>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>IS_REMINDER_SET</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Activities</label>
</ListView>